<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="userViewModel"
            type="in.sajin.tab.viewmodel.UserViewModel" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity">

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:text="@={userViewModel.username}"
            android:inputType="text" />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:text="@={userViewModel.password}"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{()-> userViewModel.onLoginClick()}"
            android:text="@string/title_activity_login" />

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="@{userViewModel.busy}"/>

    </LinearLayout>

</layout>